--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,10 +10,11 @@
     <meta name="author" content="">
     <link rel="icon" href="http://v3.bootcss.com/favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>快来抢购！</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'app/bootstrap.css' %}" rel="stylesheet">
+	<link href="{% static 'app/main.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'app/starter-template.css' %}" rel="stylesheet">
@@ -21,6 +22,8 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'app/ie-emulation-modes-warning.js' %}"></script>
+	<script src="{% static 'app/area.js' %}"></script>
+	
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,46 +33,61 @@
   </head>
 
   <body>
-<!--
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
--->
-    <div class="container">
-
+    <img src="{% static 'app/gongxi.png' %}">
+    <div class="container" style="margin-bottom:100px">
+	  
       <div class="starter-template">
         <h1>订单填写</h1>
       </div>
-      <div>
-        <form action="" method="post">
-            
-        </form>
-      </div>
+      <form action="form" method="post">
+	  
+	    <div class="form-group">
+		  <label for="product-name">产品名称</label>
+		  <input type="radio" id="product-name" name="product-name" value="眼镜1" checked="checked" />眼镜1
+		  <input type="radio" id="product-name" name="product-name" value="眼镜1" />眼镜2
+		  <input type="radio" id="product-name" name="product-name" value="眼镜1" />眼镜3
+		  <input type="radio" id="product-name" name="product-name" value="眼镜1" />眼镜4
+		</div>
+		
+        <div class="form-group">
+		  <label for="username">收货人姓名</label>
+		  <input type="text" class="form-control" id="username" placeholder="收货人姓名">
+		</div>
+		<div class="form-group">
+		  <label for="phone">手机号码</label>
+		  <input type="text" class="form-control" id="phone" placeholder="输入您的手机号码">
+		</div>
+		<div class="form-group">
+		  <label for="area">选择地区</label>
+		  <select id="province" runat="server" name="province"> </select>
+		  <select id="city" runat="server" name="city"></select>
+		  <select id="county" runat="server" name="city"></select>
+		</div>
+		<div class="form-group">
+		  <label for="detail-place">详细地址</label>
+		  <input type="text" class="form-control" id="detail-place" placeholder="例如XX街XX号">
+		</div>
+		<div class="form-group">
+		  <label for="extra">留言</label>
+		  <input type="text" class="form-control" id="extra" placeholder="输入您的留言">
+		</div>
+		<div style="margin-bottom:40px">
+		我们将免费把价值219元充电宝送到您手中，收到充电宝后，您只需向快递员支付30元快递费即可，已跟快递公司谈好价格，即使是内蒙地区也统一30元快递费。 
+		</div>
+		<button id="submit" type="button" class="btn btn-danger btn_plcae" style="width:100%; height:40px">提交订单</button>
+	  </form>
 
     </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
+	<script type="text/javascript">
+	setup();
+	</script>
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'app/jquery.js' %}"></script>
+	<script src="{% static 'app/main.js' %}"></script>
     <script src="{% static 'app/bootstrap.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'app/ie10-viewport-bug-workaround.js' %}"></script>
